--- a/nb/Llama3.2_(1B_and_3B)-Conversational.ipynb
+++ b/nb/Llama3.2_(1B_and_3B)-Conversational.ipynb
@@ -89,8 +89,6 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "UaSZc4a2Hu4o",
-        "outputId": "34e57064-a788-4b40-b28c-2571726ac3b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 352,
@@ -162,7 +160,9 @@
             "386b9691e5df47aa93a49db0bffb3d09",
             "ba30350a4cf443498b37b4704d1148db"
           ]
-        }
+        },
+        "id": "UaSZc4a2Hu4o",
+        "outputId": "34e57064-a788-4b40-b28c-2571726ac3b2"
       },
       "outputs": [
         {
@@ -375,7 +375,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 113,
+          "height": 141,
           "referenced_widgets": [
             "d3e7534b2f67498eb62d613e24394a43",
             "f2954576b2ff47faa6a9a5941e943a06",
@@ -502,7 +502,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 81,
+          "height": 109,
           "referenced_widgets": [
             "6999db2cf6b0487faceba2b396b0ded7",
             "46340c87da9e435185e76037a423f939",
@@ -622,7 +622,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 142
+          "height": 196
         },
         "id": "vhXv0xFMGNKE",
         "outputId": "55657709-5fc0-4e13-c0a2-90dfd8ced014"
@@ -663,7 +663,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 49,
+          "height": 77,
           "referenced_widgets": [
             "5d4bfe9842b7443daff81b5e8a4b668c",
             "f7e516809a6044c0ad2e144f5f6e99c9",
@@ -831,7 +831,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 142
+          "height": 196
         },
         "id": "LtsMVtlkUhja",
         "outputId": "6e549bfb-04e4-4a66-c82a-d3c5f4a421ba"
@@ -861,7 +861,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
+          "height": 142
         },
         "id": "_rD6fl8EUxnG",
         "outputId": "89259777-f825-4837-c589-08c44235a77e"
@@ -1393,13 +1393,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "upcOlWe7A1vc",
-        "outputId": "878e8971-31bf-4eb1-9266-769bf82cc3fc"
+        "outputId": "2eda7415-1f5c-4246-d5a7-c893997d9bca"
       },
       "outputs": [
         {
@@ -1413,7 +1413,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 20
         }
       ],
       "source": [
@@ -1434,20 +1434,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MKX_XKs_BNZR",
-        "outputId": "84384b54-e4b8-474e-e80f-a997719dbdaa"
+        "outputId": "cadd9360-c637-4910-8770-ce1bb61e632d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The tower I'd like to describe is the Eiffel Tower, a famous and iconic landmark located in the capital of France, which is also called Paris. It's a large and prominent structure made of iron, standing over 1,000 feet (about 300 meters) tall. It's a masterpiece of French engineering and a symbol of the country's history and culture.<|eot_id|>\n"
+            "The Eiffel Tower, located in Paris, the capital of France.<|eot_id|>\n"
           ]
         }
       ],
@@ -1489,7 +1489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "yFfaXG0WsQuE"
       },
@@ -1519,7 +1519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "iHjt_SMYsd3P"
       },
@@ -1561,7 +1561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "FqfebeAdT073"
       },
